# windy-agent

./: .coverage  .dockerignore  .env.example  .env.production.example  .gitignore  BRAND-ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI_AUDIT.md  DEAD_CODE.md  DEPLOY.md  Dockerfile  FORK.md  GAP_ANALYSIS.md  GATEWAY_AUDIT.md  INTEGRATION_AUDIT.md  Makefile  README.md  RIBOSOME_BLUEPRINT.md  SOUL.md  VISUAL_AUDIT.md  as_command, cmd_response = await handle_incoming(text, {,+14p  docker-compose.yml  pyproject.toml  windy-0.toml  windyfly.toml
.github/lint/: lint-canonical-domains.sh
.github/workflows/: ci.yml  release.yml
contracts/: README.md  control.mcp.v1.json  weave.json
data/: .update_check  backup_state.json
data/audit/: bot_key_usage.jsonl
deploy/aws/: FLY_DEPLOYMENT.md  logrotate.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUCKET_C_REVIEW_REQUEST.md  BUCKET_D_DECISIONS.md  BUILD-PROGRESS.md  CAPABILITY_AUTHOR_GUIDE.md  CHANGELOG.md  DISTRIBUTION.md  ESCALATION.md  GAP_ANALYSIS.md  HARDENING_REPORT.md  LIFEBOAT_FSM_AS_BUILT.md  MERGE_TRIAGE.md  ONBOARDING.md  PROMPT_AS_BUILT.md  RUNBOOK.md  SECURITY_AUDIT_2026-05-02.md  SMOKE_REPORT_2026-04-19.md  SOUL-MAP.md  STOCK_TOOLKIT.md  TOUR_DEMO_SCRIPT.md  USER_GUIDE.md  WAVE13_PHASE5_RUNBOOK.md  WAVE14_FIX_REPORT.md  WAVE_14_KERNEL.md  WHITE_GLOVE_SMOKE_PROMPT.md  WINDY_FLY_DNA_STRAND_PART1.md  WINDY_FLY_DNA_STRAND_PART2.md  WINDY_FLY_DNA_STRAND_PART3.md  WINDY_FLY_DNA_STRAND_PART4.md  WINDY_FLY_DNA_STRAND_PART5.md  bootcamp-demo.md  wave4-write-hands.md  wave5-shell-exec.md  wave6-multi-agent.md
docs/architecture/: synthesized_architecture.md
docs/audit/: CLI_AUDIT.md  DEAD_CODE.md  GAP_ANALYSIS_DNA_SCORECARD.md  GATEWAY_AUDIT.md  INTEGRATION_AUDIT.md  VISUAL_AUDIT.md  coverage-gaps.md  endpoint-inventory.txt  security-posture.md
docs/research/: greenfield_agent_architecture.md  grok_plan_analysis.md  openclaw_hermes_merger_analysis.md
gateway/: package.json
gateway/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
gateway/public/: index.html  index.legacy.html  setup.html
gateway/src/: bridge.ts  broker-verify.ts  hatch-concurrency.ts  hatch-remote.ts  machines.ts  providers.ts  server.ts  websocket.ts
gateway/tests/: auth-hardening.test.ts  broker-verify.test.ts  dashboard-auth-proxy.test.ts  hatch-concurrency.test.ts  hatch-remote.test.ts  localhost.test.ts  login.test.ts  rate-limits-cors.test.ts  session-cookie.test.ts  ws-auth.test.ts
lambda-spike/: .gitignore  .role_arn  README.md  deploy.sh  lambda_handler.py
remote/: package.json
remote/src/: daemon.ts
scripts/: canary-classify.py  canary-morning-triage.service.example  canary-morning-triage.sh  canary-morning-triage.timer.example  continuity_battery.py  extract_capabilities.py  extract_user_strings.py  fire-drill.sh  grandma_rewriter.py  install-continuity-battery.sh  install-evening-recap.sh  install-fire-drill.sh  install-health-purge.sh  install-journal-writer.sh  install-liveness-probe.sh  install-ollama.sh  install-qa-battery-timer.sh  install-redalarm.sh  install-weekly-brief.sh  install-windy-0-service.sh  install.sh  phase5-deploy.sh  prepare-hifly-fork.sh  probe-telegram-liveness.sh  release.sh  render_gauntlet_dashboard.py  run-windy-0.sh  setup-telegram-commands.sh  smoke-test.sh  uninstall-windy-0-service.sh  windy-0.env.example  windy-evening-recap-format.py  windy-evening-recap.sh  windy-health-purge.sh  windy-health-trend.sh  windy-qa-battery-format.py  windy-qa-battery.sh  windy-redalarm-format.py  windy-redalarm.sh  windy-tour-checklist.sh  (+3 more)
scripts/night_stress/: INSTRUCTIONS.md  analyze.py  corpus.py  run.py  start.sh
src/windyfly/: __main__.py  analytics.py  birth_certificate.py  birth_certificate_mailer.py  branding.py  chat_session.py  cli.py  cli_selftest.py  cli_status.py  cloud_backup.py  cloud_provision.py  commands.py  config.py  control_panel.py  ecosystem_health.py  hatch_actions.py  hatch_email.py  hatch_orchestrator.py  hatch_remote.py  hatching.py  mail_mock.py  mail_provision.py  mail_rate_limiter.py  main.py  matrix_provision.py  phone_provision.py  platform.py  pro_broker.py  provider_defaults.py  quickstart.py  runtime_claim.py  safe_fetch.py  setup_wizard.py  update.py  vps_deploy.py
tests/: conftest.py  manual_visual_hatch_check.py  test_adaptive_mode.py  test_admin_telemetry.py  test_agent_actions_audit.py  test_agent_loop.py  test_agent_turn_executor.py  test_anthropic_tool_name_sanitizer.py  test_audit_session_id_propagation.py  test_auto_pause_on_burn.py  test_auto_repair.py  test_auto_resurrect.py  test_autonomy_slider_wired.py  test_birth_certificate.py  test_boot_sequence.py  test_branding.py  test_bridge_integration.py  test_calendar.py  test_capability_cloudflare.py  test_capability_email.py  test_capability_filesystem.py  test_capability_filesystem_glob_grep.py  test_capability_filesystem_writes.py  test_capability_invoke_sync.py  test_capability_memory_search.py  test_capability_registry.py  test_capability_security_audit.py  test_capability_shell.py  test_capability_timeout.py  test_capability_undo_journal.py  test_cert_of_record_fetch.py  test_channel_health.py  test_channel_inbound_band.py  test_channel_launch_wiring.py  test_channel_manager_startup.py  test_chaos.py  test_chat_session.py  test_chat_tool.py  test_chunked_reply_and_typing.py  test_cli_commands.py  (+193 more)
tests/capability_matrix/: test_matrix_complete.py
tests/contract/: test_bot_credentials.py  test_bot_key_hardening.py  test_cloud_quota.py  test_command_gate.py  test_ecosystem_health.py  test_ecosystem_shape_canary.py  test_eternitas_plumbing.py  test_hatch_ordering.py  (+7 more)
(+297 files in other folders)
