[project]
name = "windyfly"
version = "0.5.1"
description = "Windy Fly — AI agent brain of the Windy ecosystem"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "matrix-nio>=0.24",
    "sqlite-vec>=0.1",
    "python-dotenv>=1.0",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
slack = ["slack-bolt>=1.18"]
whatsapp = ["twilio>=9.0", "flask>=3.0"]
signal = ["httpx>=0.27"]
teams = ["botbuilder-core>=4.15", "botbuilder-integration-aiohttp>=4.15"]
irc = ["irc>=20.0"]
all-channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "twilio>=9.0",
    "flask>=3.0",
    "botbuilder-core>=4.15",
    "irc>=20.0",
]

[project.scripts]
windy = "windyfly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.0",
    "respx>=0.22.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
