[project]
name = "windyfly"
dynamic = ["version"]
description = "Windy Fly — AI agent brain of the Windy ecosystem"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "matrix-nio>=0.24",
    "sqlite-vec>=0.1",
    "python-dotenv>=1.0",
    "fpdf2>=2.7",
    "cryptography>=42.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
discord = ["discord.py>=2.3"]
slack = ["slack-bolt>=1.18"]
whatsapp = ["twilio>=9.0", "flask>=3.0"]
signal = ["httpx>=0.27"]
teams = ["botbuilder-core>=4.15", "botbuilder-integration-aiohttp>=4.15"]
irc = ["irc>=20.0"]
calendar = [
    "google-api-python-client>=2.0",
    "google-auth-oauthlib>=1.0",
]
sentry = ["sentry-sdk>=2.0"]
semantic = [
    # Opt-in semantic memory: hybrid FTS5+cosine retrieval over
    # episode content. Adds ~600MB of torch+transformers; not
    # installed by default. Enable with:
    #   pip install windyfly[semantic]
    # Without this, the embedding columns stay NULL and search
    # falls back to FTS5-only — same as pre-PR #127 behavior.
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]
voice = [
    # Opt-in voice ingestion: Whisper transcription of Telegram
    # voice notes. Adds ~200MB (faster-whisper + onnxruntime +
    # tokenizers + huggingface-hub) plus the model weights on first
    # use (~75MB for tiny.en, cached at ~/.cache/huggingface). Not
    # installed by default. Enable with:
    #   pip install windyfly[voice]
    # Without this, voice messages get a polite "voice not ready
    # yet, please type" reply rather than the silent drop pre-PR
    # #129. Voice synthesis (text-to-speech reply) deferred to a
    # follow-up — text-back is the v1 contract.
    "faster-whisper>=1.0",
]
all-channels = [
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "slack-bolt>=1.18",
    "twilio>=9.0",
    "flask>=3.0",
    "botbuilder-core>=4.15",
    "irc>=20.0",
]

[project.scripts]
windy = "windyfly.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/windyfly/__init__.py"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.0",
    "respx>=0.22.0",
    "types-PyYAML>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── mypy ──────────────────────────────────────────────────────────────────
# We type the code WE own; third-party channel SDKs are gated on extras
# (pip install windyfly[telegram|discord|slack|...]), so mypy can't find
# them on a baseline install. Silencing them per-module is the standard
# pattern — see the telegram/discord/slack/teams/irc/whatsapp/nio blocks
# below. Sentry + Google-calendar are also optional extras.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = false
warn_unused_ignores = true
warn_redundant_casts = true
# Tests exercise code paths with deliberately loose typing — don't block
# on them for the cleanup pass.
exclude = ["tests/"]

# Optional third-party SDKs — silent when absent.
[[tool.mypy.overrides]]
module = [
    "twilio.*",
    "flask",
    "telegram.*",
    "discord",
    "discord.*",
    "slack_bolt.*",
    "botbuilder.*",
    "irc",
    "irc.*",
    "google.oauth2.*",
    "google.auth.*",
    "googleapiclient.*",
    "google_auth_oauthlib.*",
    "sentry_sdk",
    "nio",
    "nio.*",
    "fpdf",
    "fpdf.*",
]
ignore_missing_imports = true
